Fixes issue with the distribution plugin in the build script. No need to maintain an old version of it since now it will correct generate the start script with the DEFAULT_JVM_OPTS set correctly.